<resources>
    <string name="app_name">BBE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cloudmanagement">Cloudmanagement</string>

    <string name="menu_home">Home</string>
    <string name="menu_einstellungen">Einstellungen</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_ausweis">Diabetiker-Ausweis</string>
    <string name="menu_benutzerhandbuch">Benutzerhandbuch</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_impressum">Impressum</string>
    <string name="menu_barcode">Barcodescanner</string>
    <string name="menu_input">Manuelle Eingabe</string>
    <string name="title_activity_settings">activity_settings</string>

    <!-- Preference Titles -->
    <string name="preference_testlist_title">Liste der BÄNGER</string>
    <string name="preference_testlist_key">Ballermann</string>
    <string name="preference_testlist_default">12Polizei,34Feuerwehr,56AlteHex</string>
    <string name="preference_blutzucker_title">Blutzuckerwert</string>
    <string name="preference_testcalc_key">Testrechnung 1</string>
    <string name="preference_testcalc_default">5</string>
    <string name="preference_langblutzucker_title">Langzeitblutzuckerwert</string>
    <string name="preference_langtestcalc_key">Testrechnung 2</string>
    <string name="preference_langtestcalc_default">5</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>