<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bbe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_einstellungen"
        android:name="com.example.bbe.ui.home.HomeFragment"
        android:label="@string/menu_einstellungen"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profil"
        android:name="com.example.bbe.ui.gallery.GalleryFragment"
        android:label="@string/menu_profil"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_ausweis"
        android:name="com.example.bbe.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_ausweis"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_benutzerhandbuch"
        android:name="com.example.bbe.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_benutzerhandbuch"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.bbe.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_impressum"
        android:name="com.example.bbe.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_impressum"
        tools:layout="@layout/fragment_slideshow" />
</navigation>